--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Orders</h1>
+<h1><%= Order.count %></h1>
 
 <table>
   <thead>
@@ -14,8 +15,9 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= order.customer_id %></td>
-        <td><%= order.notes %></td>
+        <td><%= link_to order.customer.name, "/customers/#{order.customer.id}" %></td>
+        <td><%= order.status %></td>
+        <td><%= order.amount %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
