--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Orders</h1>
-<h1><%= Order.count %></h1>
+<h2> <%= "Listing Orders - #{Order.count.to_s}" %> </h2>
 
 <table>
   <thead>
