--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,8 @@
     <ul>
       <li> <%= link_to("Customers", '/customers') %> </li>
       <li> <%= link_to("Orders", '/orders') %> </li>
-      <li>
-        <%= link_to("Sync", '/sync/amazon') %> 
-      </li>
+      <li> <%= link_to("Reviews", '/reviews') %> </li>
+      <li> <%= link_to("Sync", '/sync/amazon') %> </li>
     </ul>
   </nav>
   <div style="clear: both"></div>
